ipc/ipdl/test/ipdl/error/multimanNonexistentMgrs.ipdl
protocol multimanNonexistentManagers {
    manager Starsky or Hutch;

child:
    Dummy();
    __delete__();
};
